Fix a z-index issue in dark mode.

--- a/histomicsui/web_client/stylesheets/popover/annotationPopover.styl
+++ b/histomicsui/web_client/stylesheets/popover/annotationPopover.styl
@@ -2,6 +2,7 @@
   position absolute
   pointer-events none
   margin-left 15px
+  z-index 1000
 
   .h-annotation-popover
     position absolute
